e2e/tests/all/snapshots/image_cropper_rest_desktop.snap
---
source: e2e/src/suite.rs
description: image_cropper at desktop (rest)
expression: tree
---
button "Before"
  StaticText "Before"
image "A sun on blue"
slider "Crop area" = 25 [orientation=horizontal] [valuemax=100] [valuemin=0]
  description "Arrow keys move the crop area, or resize it from a corner. Shift moves further."
slider "Top left corner" = 50 [orientation=horizontal] [valuemax=100] [valuemin=0]
  description "Arrow keys move the crop area, or resize it from a corner. Shift moves further."
slider "Top right corner" = 50 [orientation=horizontal] [valuemax=100] [valuemin=0]
  description "Arrow keys move the crop area, or resize it from a corner. Shift moves further."
slider "Bottom right corner" = 50 [orientation=horizontal] [valuemax=100] [valuemin=0]
  description "Arrow keys move the crop area, or resize it from a corner. Shift moves further."
slider "Bottom left corner" = 50 [orientation=horizontal] [valuemax=100] [valuemin=0]
  description "Arrow keys move the crop area, or resize it from a corner. Shift moves further."
group "Crop area"
  button "Move left"
  button "Move up"
  button "Move down"
  button "Move right"
  button "Smaller"
  button "Larger"
paragraph
  StaticText "25,25,50,50"
