e2e/tests/all/snapshots/image_rest_mobile.snap
---
source: e2e/src/suite.rs
description: image at mobile (rest)
expression: tree
---
image "A blue square"
image "A brown square"
image "A missing square"
button "Zoom in: A blue square" [haspopup=dialog]
