e2e/tests/all/snapshots/kanban_lifted_desktop.snap
---
source: e2e/src/suite.rs
description: kanban at desktop (lifted)
expression: tree
---
button "Before"
  StaticText "Before"
StaticText "To do"
list "To do"
  listitem [level=1]
    button "Reorder Alpha"
      description "Press Space to lift the item, the arrow keys to move it, Space again to drop it, Escape to cancel."
    paragraph
      StaticText "Alpha"
    button "Move Alpha up" [disabled]
    button "Move Alpha down"
    button "Move Alpha to column" [expanded=false] [haspopup=menu]
  listitem [level=1]
    button "Reorder Beta"
      description "Press Space to lift the item, the arrow keys to move it, Space again to drop it, Escape to cancel."
    paragraph
      StaticText "Beta"
    button "Move Beta up"
    button "Move Beta down"
    button "Move Beta to column" [expanded=false] [haspopup=menu]
  listitem [level=1]
    button "Reorder Gamma"
      description "Press Space to lift the item, the arrow keys to move it, Space again to drop it, Escape to cancel."
    paragraph
      StaticText "Gamma"
    button "Move Gamma up"
    button "Move Gamma down" [disabled]
    button "Move Gamma to column" [expanded=false] [haspopup=menu]
StaticText "Doing"
list "Doing"
  listitem [level=1]
    button "Reorder Delta"
      description "Press Space to lift the item, the arrow keys to move it, Space again to drop it, Escape to cancel."
    paragraph
      StaticText "Delta"
    button "Move Delta up" [disabled]
    button "Move Delta down" [disabled]
    button "Move Delta to column" [expanded=false] [haspopup=menu]
StaticText "Done"
list "Done"
status [atomic] [live=polite]
  StaticText "Lifted Alpha, position 1 of 3."
paragraph
  StaticText "Alpha Beta Gamma | Delta |"
paragraph
button "After"
  StaticText "After"
