e2e/tests/all/snapshots/kanban_menu_open_mobile.snap
---
source: e2e/src/suite.rs
description: kanban at mobile (menu_open)
expression: tree
---
button "Before"
  StaticText "Before"
StaticText "To do"
list "To do"
  listitem [level=1]
    button "Reorder Alpha"
      description "Press Space to lift the item, the arrow keys to move it, Space again to drop it, Escape to cancel."
    paragraph
      StaticText "Alpha"
    button "Move Alpha up" [disabled]
    button "Move Alpha down"
    button "Move Alpha to column" [expanded] [haspopup=menu]
  listitem [level=1]
    button "Reorder Beta"
      description "Press Space to lift the item, the arrow keys to move it, Space again to drop it, Escape to cancel."
    paragraph
      StaticText "Beta"
    button "Move Beta up"
    button "Move Beta down"
    button "Move Beta to column" [expanded=false] [haspopup=menu]
  listitem [level=1]
    button "Reorder Gamma"
      description "Press Space to lift the item, the arrow keys to move it, Space again to drop it, Escape to cancel."
    paragraph
      StaticText "Gamma"
    button "Move Gamma up"
    button "Move Gamma down" [disabled]
    button "Move Gamma to column" [expanded=false] [haspopup=menu]
StaticText "Doing"
list "Doing"
  listitem [level=1]
    button "Reorder Delta"
      description "Press Space to lift the item, the arrow keys to move it, Space again to drop it, Escape to cancel."
    paragraph
      StaticText "Delta"
    button "Move Delta up" [disabled]
    button "Move Delta down" [disabled]
    button "Move Delta to column" [expanded=false] [haspopup=menu]
StaticText "Done"
list "Done"
status [atomic] [live=polite]
paragraph
  StaticText "Alpha Beta Gamma | Delta |"
paragraph
button "After"
  StaticText "After"
button "Refuse moves"
  StaticText "Refuse moves"
button "Add Omega"
  StaticText "Add Omega"
menu "Move Alpha to column" [orientation=vertical]
  menuitem "To do" [disabled]
    StaticText "To do"
  menuitem "Doing"
    StaticText "Doing"
  menuitem "Done"
    StaticText "Done"
--> aria-controls [id="lsx-N-menu"] (rendered above)
